--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,8 +120,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap");
 
 :root {
-  --color-primary: #2f57ef;
-  --color-secondary: #b966e7;
+  --color-primary: #567C8D;
+  --color-secondary: #F5EFEB;
   --color-coral: #E9967A;
   --color-violet: #800080;
   --color-pink: #DB7093;
@@ -8611,7 +8611,7 @@ textarea:-ms-input-placeholder {
   top: -250px;
   right: -250px;
   bottom: auto;
-  background-image: linear-gradient(45deg, var(--color-violet), var(--color-pink));
+  background-image: linear-gradient(45deg, var(--color-primary-new), var(--color-secondary-new));
 }
 
 .rbt-round-bottom-shape {
