Updated blogs and theme.

--- a/public/scss/blog/_post-default.scss
+++ b/public/scss/blog/_post-default.scss
@@ -126,7 +126,7 @@ figcaption {
             display: inline-block;
             line-height: 22px;
             &:hover {
-                color: var(--color-primary);
+                color: #567C8D;
             }
         }
         svg {
