--- a/public/scss/default/_text-animation.scss
+++ b/public/scss/default/_text-animation.scss
@@ -617,7 +617,7 @@ Primary style
     bottom: 0;
     height: 2px;
     width: 0;
-    background: var(--color-primary);
+    background: #567C8D;
     z-index: 2;
     -webkit-transition: width 0.3s -0.1s;
     -moz-transition: width 0.3s -0.1s;
