--- a/public/scss/default/_typography.scss
+++ b/public/scss/default/_typography.scss
@@ -433,7 +433,7 @@ ul {
 			@extend %transition;
 
 			&:hover {
-				color: var(--color-primary);
+				color: #567C8D;
 			}
 		}
 	}
@@ -457,7 +457,7 @@ ol {
 			text-decoration: none;
 
 			&:hover {
-				color: var(--color-primary);
+				color: #567C8D;
 			}
 		}
 	}
