--- a/public/scss/elements/_about.scss
+++ b/public/scss/elements/_about.scss
@@ -149,7 +149,7 @@
         font-size: 16px;
 
         i {
-            color: var(--color-primary);
+            color: #567C8D;
             margin-right: 10px;
         }
     }
