--- a/public/scss/elements/_breadcrumb.scss
+++ b/public/scss/elements/_breadcrumb.scss
@@ -54,7 +54,7 @@
         }
 
         a:hover {
-            color: var(--color-primary);
+            color: #567C8D;
         }
 
         .icon-right {
