--- a/public/scss/elements/_callto-action.scss
+++ b/public/scss/elements/_callto-action.scss
@@ -69,7 +69,7 @@
     }
     &.style-3 {
         .content-wrapper {
-            background-color: var(--color-primary);
+            background-color: #567C8D;
             padding: 70px 50px;
             border-radius: var(--radius);
             @media #{$md-layout} {
