--- a/public/scss/elements/_modal.scss
+++ b/public/scss/elements/_modal.scss
@@ -134,7 +134,7 @@ body {
 
     &__active {
         color: var(--color-white);
-        background: var(--color-primary) !important;
+        background: #567C8D !important;
     }
 
     &__edit-btn {
