--- a/public/scss/elements/_pagination.scss
+++ b/public/scss/elements/_pagination.scss
@@ -40,7 +40,7 @@
         &.active,
         &:hover {
             a {
-                background: var(--color-primary);
+                background: #567C8D;
                 color: var(--color-white);
             }
         }
