--- a/public/scss/elements/_section-title.scss
+++ b/public/scss/elements/_section-title.scss
@@ -52,8 +52,8 @@
         border-radius: 100px;
         text-transform: uppercase;
         display: inline-block;
-        background: var(--color-primary);
-        color: var(--color-primary);
+        background: #567C8D;
+        color: #567C8D;
     }
 
     .subtitle-2 {
