--- a/public/scss/elements/_testimonial.scss
+++ b/public/scss/elements/_testimonial.scss
@@ -94,7 +94,7 @@ Testimonial Styles
             margin-top: 12px;
 
             span {
-                color: var(--color-primary);
+                color: #567C8D;
                 text-transform: uppercase;
                 font-weight: 500;
             }
