--- a/public/scss/header/_mobilemenu.scss
+++ b/public/scss/header/_mobilemenu.scss
@@ -111,7 +111,7 @@
                 font-size: 16px;
                 font-weight: 500;
                 &.active {
-                    color: var(--color-primary) !important;
+                    color: #567C8D !important;
                 }
                 i {
                     display: none;
@@ -132,7 +132,7 @@
                     a {
                         font-size: 15px;
                         &.active {
-                            color: var(--color-primary) !important;
+                            color: #567C8D !important;
                         }
                     }
                 }
