--- a/public/scss/header/_social-share.scss
+++ b/public/scss/header/_social-share.scss
@@ -45,7 +45,7 @@
                 margin-right: 0px;
             }
             &:hover {
-                color: var(--color-primary);
+                color: #567C8D;
                 &::before {
                     opacity: 1;
                     transform: scale(1);
