--- a/public/scss/header/common/_headertop.scss
+++ b/public/scss/header/common/_headertop.scss
@@ -204,7 +204,7 @@
                 transition: 0.3s;
 
                 &:hover {
-                    color: var(--color-primary);
+                    color: #567C8D;
                 }
             }
 
