--- a/public/scss/template/_contact.scss
+++ b/public/scss/template/_contact.scss
@@ -26,7 +26,7 @@
     }
 
     .icon {
-        color: var(--color-primary);
+        color: #567C8D;
         border-radius: 100%;
         font-size: 33px;
         display: inline-block;
