--- a/public/scss/template/_sidebar.scss
+++ b/public/scss/template/_sidebar.scss
@@ -35,7 +35,7 @@
         margin: 0 5px;
         margin-bottom: 10px;
         &:hover {
-            background: var(--color-primary);
+            background: #567C8D;
             color: var(--color-white);
         }
     }
@@ -50,7 +50,7 @@
 .rbt-show-more-btn {
     font-size: 14px;
     font-weight: 700;
-    color: var(--color-primary);
+    color: #567C8D;
     display: block;
     margin-top: 5px;
     position: relative;
