--- a/public/scss/blog/_blog-details.scss
+++ b/public/scss/blog/_blog-details.scss
@@ -34,7 +34,7 @@
     p {
         line-height: 1.67;
         a {
-            color: var(--color-primary);
+            color: #567C8D;
         }
     }
 
@@ -72,12 +72,12 @@
                 }
                 &:hover {
                     i {
-                        background-color: var(--color-primary);
+                        background-color: #567C8D;
                         color: var(--color-white);
-                        border-color: var(--color-primary);
+                        border-color: #567C8D;
                     }
                     span {
-                        color: var(--color-primary);
+                        color: #567C8D;
                     }
                 }
             }
@@ -117,9 +117,9 @@
         border-radius: 4px;
         @extend %transition;
         &:hover {
-            background-color: var(--color-primary);
+            background-color: #567C8D;
             color: #ffffff;
-            border-color: var(--color-primary);
+            border-color: #567C8D;
         }
     }
 }
@@ -166,7 +166,7 @@
                                 color: var(--color-heading);
                             }
                             &::after {
-                                color: var(--color-primary);
+                                color: #567C8D;
                             }
                         }
                     }
@@ -310,7 +310,7 @@
                             color: var(--color-heading);
                         }
                         &::after {
-                            color: var(--color-primary);
+                            color: #567C8D;
                         }
                     }
                 }
@@ -336,7 +336,7 @@
                     font-size: 14px;
                     line-height: 18px;
                     display: flex;
-                    color: var(--color-primary);
+                    color: #567C8D;
                     margin-left: 8px;
                     padding-left: 8px;
                     position: relative;
@@ -349,12 +349,12 @@
                                 color: var(--color-heading);
                             }
                             &::after {
-                                color: var(--color-primary);
+                                color: #567C8D;
                             }
                         }
                     }
                     &:hover {
-                        color: var(--color-primary);
+                        color: #567C8D;
                     }
                     &::before {
                         position: absolute;
