--- a/public/scss/blog/_sidebar.scss
+++ b/public/scss/blog/_sidebar.scss
@@ -72,7 +72,7 @@
             margin-right: 6px;
         }
         &:hover {
-            background: var(--color-primary);
+            background: #567C8D;
             color: var(--color-white);
             transform: scale(1.1);
         }
@@ -108,7 +108,7 @@
         font-size: var(--font-size-b3);
         a {
             &:hover {
-                color: var(--color-primary) !important;
+                color: #567C8D !important;
             }
         }
         @media #{$lg-layout} {
