--- a/public/scss/default/_shortcode.scss
+++ b/public/scss/default/_shortcode.scss
@@ -40,9 +40,9 @@
 =================================*/
 
 @include config-bg-colors('bg-color-',
-    'primary' var(--color-primary) !important,
+    'primary' #567C8D !important,
     'primary-alt' var( --color-primary-alt) !important,
-    'secondary' var(--color-secondary) !important,
+    'secondary' #cdcdcd !important,
     'secondary-alt' var(--color-secondary-alt) !important,
     'light' var(--color-light) !important,
     'extra2' var(--color-extra2) !important,
@@ -487,7 +487,7 @@ textarea:-ms-input-placeholder {
 }
 
 [data-overlay]:before {
-    background: var(--color-primary);
+    background: #567C8D;
 }
 
 [data-black-overlay]:before {
@@ -499,7 +499,7 @@ textarea:-ms-input-placeholder {
 }
 
 [data-gradient-overlay]:before {
-    background: linear-gradient(90deg, var(--color-primary), var(--color-secondary));
+    background: linear-gradient(90deg, #567C8D, #cdcdcd);
 }
 
 @for $i from 1 through 10 {
@@ -592,7 +592,7 @@ textarea:-ms-input-placeholder {
                 height: 0;
                 border-style: solid;
                 border-width: 0 5px 7px 5px;
-                border-color: transparent transparent var(--color-primary) transparent;
+                border-color: transparent transparent #567C8D transparent;
                 position: absolute;
                 content: "";
                 left: 50%;
@@ -604,7 +604,7 @@ textarea:-ms-input-placeholder {
     &:hover {
         span {
             &.text {
-                color: var(--color-primary);
+                color: #567C8D;
             }
         }
     }
