--- a/public/scss/elements/_backtotop.scss
+++ b/public/scss/elements/_backtotop.scss
@@ -66,7 +66,7 @@
         text-align: center;
         line-height: 46px;
         font-size: 20px;
-        color: var(--color-primary);
+        color: #567C8D;
         left: 0;
         top: 0;
         height: 46px;
@@ -80,7 +80,7 @@
 
     &:hover {
         &::after {
-            color: var(--color-primary);
+            color: #567C8D;
         }
     }
     &::before {
@@ -103,7 +103,7 @@
         z-index: 2;
         -webkit-transition: all 200ms linear;
         transition: all 200ms linear;
-        color: var(--color-primary);
+        color: #567C8D;
     }
     svg {
         path {
@@ -111,7 +111,7 @@
         }
         &.rbt-back-circle {
             path {
-                stroke: var(--color-primary);
+                stroke: #567C8D;
                 stroke-width: 4;
                 box-sizing: border-box;
                 -webkit-transition: all 200ms linear;
