--- a/public/scss/elements/_badge.scss
+++ b/public/scss/elements/_badge.scss
@@ -31,7 +31,7 @@
     line-height: 34px;
 
     &:hover {
-        background: var(--color-primary);
+        background: #567C8D;
         color: var(--color-white);
     }
 }
@@ -90,7 +90,7 @@
     strong {
         margin-left: 5px;
         display: inline-block;
-        color: var(--color-primary);
+        color: #567C8D;
     }
 
     &.badge-full-height {
@@ -203,7 +203,7 @@
     }
 
     &:hover {
-        color: var(--color-primary);
+        color: #567C8D;
 
         &::after {
             opacity: 1;
@@ -237,6 +237,6 @@
     border-radius: 100px;
     text-transform: uppercase;
     display: inline-block;
-    background: var(--color-primary);
-    color: var(--color-primary);
+    background: #567C8D;
+    color: #567C8D;
 }
