--- a/public/scss/elements/_card.scss
+++ b/public/scss/elements/_card.scss
@@ -70,7 +70,7 @@
                 color: var(--color-heading);
                 @extend %transition;
                 &:hover {
-                    color: var(--color-primary);
+                    color: #567C8D;
                 }
             }
         }
@@ -529,7 +529,7 @@
                     transition: 0.3s;
                     &:hover {
                         background: var(--primary-opacity);
-                        color: var(--color-primary);
+                        color: #567C8D;
                     }
                 }
             }
