--- a/public/scss/elements/_category-box.scss
+++ b/public/scss/elements/_category-box.scss
@@ -333,7 +333,7 @@
 
         &.active {
             &::after {
-                background: var(--color-primary);
+                background: #567C8D;
                 opacity: 0.7;
             }
         }
