--- a/public/scss/elements/_category.scss
+++ b/public/scss/elements/_category.scss
@@ -93,7 +93,7 @@
                         margin: 0;
                         border-radius: 3px;
                         &:hover {
-                            color: var(--color-primary);
+                            color: #567C8D;
                             background: var(--black-opacity);
                         }
                     }
@@ -137,7 +137,7 @@
                                     padding: 9px 10px;
                                     transition: 0.4s;
                                     &:hover {
-                                        color: var(--color-primary);
+                                        color: #567C8D;
                                     }
                                 }
                             }
@@ -153,7 +153,7 @@
 
                     &.active {
                         & > a {
-                            color: var(--color-primary);
+                            color: #567C8D;
                             background: var(--black-opacity);
                         }
                         .dropdown-child-wrapper {
