--- a/public/scss/elements/_contact.scss
+++ b/public/scss/elements/_contact.scss
@@ -54,7 +54,7 @@
                     }
 
                     &:hover {
-                        color: var(--color-primary);
+                        color: #567C8D;
                     }
                 }
             }
@@ -156,7 +156,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background-color: var(--color-primary);
+            background-color: #567C8D;
             transition: 0.4s;
         }
     }
@@ -165,7 +165,7 @@
         label {
             top: -10px;
             font-size: 12px;
-            color: var(--color-primary);
+            color: #567C8D;
             transition: 0.3s;
         }
 
@@ -195,7 +195,7 @@
         i {
             font-size: 40px;
             stroke-width: 1px;
-            color: var(--color-primary);
+            color: #567C8D;
             margin-bottom: 10px;
         }
 
