--- a/public/scss/elements/_counterup.scss
+++ b/public/scss/elements/_counterup.scss
@@ -161,7 +161,7 @@
 
         &.border-color-secondary {
             &::after {
-                border-color: var(--color-secondary);
+                border-color: #cdcdcd;
             }
         }
 
@@ -338,14 +338,14 @@
     height: 4px;
     left: 0;
     top: 0;
-    background-image: radial-gradient(ellipse at center,var(--color-primary) 0,rgba(255,255,255,0) 70%);
+    background-image: radial-gradient(ellipse at center,#567C8D 0,rgba(255,255,255,0) 70%);
 }
 
 .hanger-line > .col-lg-3::before {
     content: "";
     width: 3px;
     height: 32px;
-    background-image: linear-gradient(var(--color-primary), rgba(255,255,255,0));
+    background-image: linear-gradient(#567C8D, rgba(255,255,255,0));
     left: 50%;
     bottom: 100%;
     position: absolute;
@@ -361,7 +361,7 @@
     content: "";
     width: 20px;
     height: 20px;
-    border: 4px solid var(--color-primary);
+    border: 4px solid #567C8D;
     border-radius: 100%;
     left: 50%;
     bottom: calc(100% + 23px);
