--- a/public/scss/elements/_feature.scss
+++ b/public/scss/elements/_feature.scss
@@ -8,7 +8,7 @@
         width: 50px;
         min-width: 50px;
         height: 50px;
-        background: var(--color-secondary);
+        background: #cdcdcd;
         display: flex;
         border-radius: 100%;
         align-items: center;
@@ -22,7 +22,7 @@
 
         &.bg-primary-opacity {
             i {
-                color: var(--color-primary);
+                color: #567C8D;
             }
         }
 
@@ -40,7 +40,7 @@
 
         &.bg-secondary-opacity {
             i {
-                color: var(--color-secondary);
+                color: #cdcdcd;
             }
         }
     }
@@ -85,7 +85,7 @@
     width: 50px;
     min-width: 50px;
     height: 50px;
-    background: var(--color-secondary);
+    background: #cdcdcd;
     display: flex;
     border-radius: 100%;
     align-items: center;
@@ -98,7 +98,7 @@
 
     &.bg-primary-opacity {
         i {
-            color: var(--color-primary);
+            color: #567C8D;
         }
     }
 
@@ -116,7 +116,7 @@
 
     &.bg-secondary-opacity {
         i {
-            color: var(--color-secondary);
+            color: #cdcdcd;
         }
     }
 
