--- a/public/scss/elements/_portfolio.scss
+++ b/public/scss/elements/_portfolio.scss
@@ -62,7 +62,7 @@
         &.is-checked,
         &.active,
         &:hover {
-            background-color: var(--color-primary);
+            background-color: #567C8D;
             color: var(--color-white) !important;
         }
     }
@@ -115,7 +115,7 @@
                 &::after {
                     width: 100%;
                     opacity: 1;
-                    background: var(--color-primary);
+                    background: #567C8D;
                 }
             }
         }
