--- a/public/scss/elements/_search.scss
+++ b/public/scss/elements/_search.scss
@@ -69,7 +69,7 @@
                     margin-bottom: 15px;
                 }
                 &:focus {
-                    border-color: var(--color-primary);
+                    border-color: #567C8D;
                 }
             }
         }
@@ -183,7 +183,7 @@
         }
         &:hover {
             i {
-                color: var(--color-primary);
+                color: #567C8D;
             }
         }
     }
@@ -213,7 +213,7 @@
         text-align: center;
         transition: 0.4s;
         &:hover {
-            color: var(--color-primary);
+            color: #567C8D;
         }
     }
 }
