--- a/public/scss/elements/_team.scss
+++ b/public/scss/elements/_team.scss
@@ -1,4 +1,5 @@
 
+
 .team-style-default,
 .rbt-default-card {
     margin-top: 75px;
@@ -89,7 +90,7 @@
 
     &.border-gradient {
         .thumbnail {
-            background: linear-gradient(95deg, var(--color-primary) 15%, var(--color-tertiary) 45%, var(--color-pink) 75%, var(--color-secondary) 100%) 98%/200% 100%;
+            background: linear-gradient(95deg, #567C8D 15%, var(--color-tertiary) 45%, var(--color-pink) 75%, #cdcdcd 100%) 98%/200% 100%;
             padding: 5px;
             border: 0 none;
         }
@@ -199,7 +200,7 @@
         display: block;
         z-index: 1;
         content: '';
-        background: linear-gradient(to bottom, rgba(0,0,0,0), var(--color-primary) 100%);
+        background: linear-gradient(to bottom, rgba(0,0,0,0), #567C8D 100%);
         transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
         cursor: pointer;
         opacity: 0;
