--- a/public/scss/footer/_copyright.scss
+++ b/public/scss/footer/_copyright.scss
@@ -26,7 +26,7 @@
                 color: var(--color-body);
                 transition: 0.4s;
                 &:hover {
-                    color: var(--color-primary);
+                    color: #567C8D;
                 }
             }
             & + li {
