--- a/public/scss/header/_one-page-navigation.scss
+++ b/public/scss/header/_one-page-navigation.scss
@@ -74,7 +74,7 @@
                         &::after {
                             width: 100%;
                             opacity: 1;
-                            background: var(--color-primary);
+                            background: #567C8D;
                         }
                     }
                 }
