--- a/public/scss/shop/_product-details.scss
+++ b/public/scss/shop/_product-details.scss
@@ -86,7 +86,7 @@
                     right: -3px;
                 }
                 &:hover {
-                    color: var(--color-primary);
+                    color: #567C8D;
                 }
             }
             a:last-child:after { 
@@ -124,13 +124,13 @@
                     bottom: 0;
                     left: 0;
                     height: 2px;
-                    background: var(--color-primary);
+                    background: #567C8D;
                     transition: 0.4s;
                     width: 0;
                 }
                 &:hover,
                 &.active {
-                    color: var(--color-primary);
+                    color: #567C8D;
                     &::after {
                         width: 100%;
                     }
