--- a/public/scss/template/_banner.scss
+++ b/public/scss/template/_banner.scss
@@ -1650,7 +1650,7 @@
 
             &:hover {
                 transform: none;
-                color: var(--color-primary);
+                color: #567C8D;
             }
         }
 
@@ -1697,7 +1697,7 @@
         content: attr(data-tooltip);
         color: var(--color-white);
         padding: 5px 8px;
-        background: var(--color-primary);
+        background: #567C8D;
         width: max-content;
         border-radius: 5px;
         text-align: center;
@@ -1709,7 +1709,7 @@
         --translate-y: calc(-1 * var(--arrow-size));
         content: '';
         border: var(--arrow-size) solid transparent;
-        border-top-color: var(--color-primary);
+        border-top-color: #567C8D;
     }
 
     &:hover {
@@ -1811,7 +1811,7 @@
 
         &.swiper-slide-thumb-active {
             &::before {
-                background: linear-gradient(90deg, var(--color-secondary), var(--color-primary));
+                background: linear-gradient(90deg, #cdcdcd, #567C8D);
             }
 
             &::after {
