--- a/public/scss/template/_course-sidebar.scss
+++ b/public/scss/template/_course-sidebar.scss
@@ -118,7 +118,7 @@ Course Sidebar
                 color: var(--color-body);
                 transition: 0.4s;
                 &:hover {
-                    color: var(--color-primary);
+                    color: #567C8D;
                 }
             }
             & + li {
