--- a/public/scss/template/_lesson.scss
+++ b/public/scss/template/_lesson.scss
@@ -126,7 +126,7 @@
 
         input[type=checkbox]:checked~label,
         input[type=radio]:checked~label {
-            border-color: var(--color-primary);
+            border-color: #567C8D;
         }
 
         input[type=checkbox]~label::before,
@@ -216,7 +216,7 @@
 
     &:hover {
         background: var(--black-opacity) !important;
-        border-color: var(--color-primary);
+        border-color: #567C8D;
     }
 
     input[type=file] {
@@ -233,12 +233,12 @@
             background: var(--primary-opacity) !important;
             padding: 10px 20px;
             border-radius: 10px;
-            color: var(--color-primary) !important;
+            color: #567C8D !important;
             cursor: pointer;
         }
 
         &::file-selector-button:hover {
-            background: var(--color-primary) !important;
+            background: #567C8D !important;
             color: var(--color-white) !important;
         }
     }
@@ -251,7 +251,7 @@
 -------------------------*/
 
 .lesson-top-bar {
-    background: var(--color-primary);
+    background: #567C8D;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -271,7 +271,7 @@
 
         &:hover {
             i {
-                color: var(--color-primary);
+                color: #567C8D;
             }
         }
     }
